--- a/index.html
+++ b/index.html
@@ -417,8 +417,8 @@
 					<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 						<div class="panel panel-default">
 							
-							<div class="my-3"><a href="images/Profile.png" target="_blank"><img src="images/Profile.png" width="30" style="border-radius: 50%" /></a> Mohammad Ali, BSc Student, 2022-Present <a target="blank" rel="noopener noreferrer" href="https://alim-pi.xyz" class="signin mr-1">Portfolio<i class="fas fa-sign-in-alt"></i></a></div>
-
+							<div class="my-3"><img src="images/Profile.png" width="30" style="border-radius: 50%" />Mohammad Ali, BSc Student, 2022-Present <a target="blank" rel="noopener noreferrer" href="https://alim-pi.xyz" class="signin mr-1">Portfolio<i class="fas fa-sign-in-alt"></i></a></div>
+							<div class="my-3"><img src="images/Profile.png" width="30" style="border-radius: 50%" />Salman Alsiafy, BSc student, research assistant, 2022 <a href="https://www.linkedin.com/in/salman-alsiafy-93aa771bb" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a> </div>
 						</div>
 					</div>
 				</div><!--- END COL -->
