--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				<img src="images/new.webp" height="50px"/><a href="#open">Ph.D. positions</a> <a href="#research">Research directions</a>
 			</div>
 			<div class="col-lg-6 col-md-9 banner-image">
-				<img src="images/security_icon.png" alt="" class="img-fluid"/>
+				<img src="images/issec_lab_team.jpg" alt="" class="img-fluid"/>
 			</div>
 		</div> <!--row banner-grids-->
 		<a id="news"></a><div class="row">
@@ -393,6 +393,19 @@
 				</div>
 				<div class="col-lg-3 col-md-9">
 					<img src="images/phu.jpg" alt="Phu Phung" class="img-fluid" width="200" style="border-radius: 50%" />
+				</div>
+			</div>
+			<h4 class="head text-left">Postdoctoral fellow and Adjunct Faculty</h4>
+			<div class="row">
+
+				<div class="col-lg-9">
+					<p class="my-3  text-Left"> Ahmed EL OUADRHIRI, Ph.D. in computer science and networking. His research interests include: cyber security, fine-grained policy enforcement for mobile apps 
+						and web browsers, real-time flow-based malware detection, machine and deep learning applied to next-generation networks (5G and beyond), wireless communications, data privacy, privacy 
+                        protection in federate learning, information-centric networks, delay tolerant networks. <a href="https://www.linkedin.com/in/ahmed-el-ouadrhiri/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a>.
+				</p>
+				</div>
+				<div class="col-lg-3 col-md-9">
+					<img src="images/ahmed.png" alt="Phu Phung" class="img-fluid" width="200" style="border-radius: 50%" />
 				</div>
 			</div>
 
