Nathan Joslin - Added profile picture and brief descriptionin index.html under undergrads

--- a/index.html
+++ b/index.html
@@ -433,6 +433,7 @@
 							
 							<div class="my-3"><img src="images/Profile.png" width="30" style="border-radius: 50%" /> Mohammad Ali, BSc Student, 2022-Present <a target="blank" rel="noopener noreferrer" href="https://alim-pi.xyz" class="signin mr-1">Portfolio<i class="fas fa-sign-in-alt"></i></a></div>
 							<div class="my-3"><img src="images/Profile.png" width="30" style="border-radius: 50%" /> Salman Alsiafy, BSc Student, Research Assistant, 2022 <a href="https://www.linkedin.com/in/salman-alsiafy-93aa771bb" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a> </div>
+							<div class="my-3"><img src="images/Joslin.jpg" width="30" style="border-radius: 50%" /> Nathan Joslin, BSc Student, Honors Thesis Advisee, 2022-Present <a target="blank" rel="noopener noreferrer" href="www.linkedin.com/in/nathanjoslin" class="signin mr-1">Portfolio<i class="fab fa-linkedin"></i></a></div>
 						</div>
 					</div>
 				</div><!--- END COL -->
