--- a/index.html
+++ b/index.html
@@ -533,12 +533,11 @@
 				<div class="col-md-12">
 					<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 						<div class="panel panel-default">
+							<div class="my-3"><a href="images/Profile.png" target="_blank"><img src="images/Profile.png" width="30" style="border-radius: 50%" /></a> Nguyen Le, Summer Research, 2024 (Undergraduate Student at Iowa State University), <a href="https://www.linkedin.com/in/nguyen-le=243783299/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
 
 							<div class="my-3"><a href="images/danh.jpg" target="_blank"><img src="images/danh.jpg" width="30" style="border-radius: 50%" /></a> Huu-Danh Pham, Master Student at VNUHCM - University of Information Technology, 2019-Present <a href="https://www.linkedin.com/in/danhph" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
 
 							<div class="my-3"><a href="images/Son.jpg" target="_blank"><img src="images/Son.jpg" width="30" style="border-radius: 50%" /></a> Son Vu, Summer Research, 2019 (Undergraduate Student at Truman State University), <a href="https://www.linkedin.com/in/jack-armentrout-b47162189/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
-							
-							<div class="my-3"><a href="" target="_blank"><img src="" width="30" style="border-radius: 50%" /></a> Nguyen Le, Summer Research, 2024 (Undergraduate Student at Iowa State University), <a href="https://www.linkedin.com/in/nguyen-le=243783299/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
 
 						</div>
 					</div>
