Update current visitor

--- a/index.html
+++ b/index.html
@@ -526,6 +526,19 @@
 				</div><--- END COL --
 			</div><--- END ROW -->
 
+	    <h4 class="head text-left">Current Visitors and External Students</h4>
+			<div class="row">
+				<div class="col-md-12">
+					<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+						<div class="panel panel-default">
+
+							<div class="my-3"><a href="images/Profile.jpg" target="_blank"><img src="images/Profile.jpg" width="30" style="border-radius: 50%" /></a> Nguyen Le, Summer Research, 2025 (Undergraduate Student at Iowa State University), <a href="https://www.linkedin.com/in/nguyen-vinh-le/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
+
+						</div>
+					</div>
+				</div><!--- END COL -->
+			</div><!--- END ROW -->
+
 
             <h4 class="head text-left">Past Visitors and External Students</h4>
 			<div class="row">
@@ -537,8 +550,6 @@
 
 							<div class="my-3"><a href="images/Son.jpg" target="_blank"><img src="images/Son.jpg" width="30" style="border-radius: 50%" /></a> Son Vu, Summer Research, 2019 (Undergraduate Student at Truman State University), <a href="https://www.linkedin.com/in/jack-armentrout-b47162189/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
 							
-							<div class="my-3"><a href="" target="_blank"><img src="" width="30" style="border-radius: 50%" /></a> Nguyen Le, Summer Research, 2024 (Undergraduate Student at Iowa State University), <a href="https://www.linkedin.com/in/nguyen-le=243783299/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
-
 						</div>
 					</div>
 				</div><!--- END COL -->
